<resources>
    <string name="app_name">Food Crate</string>
    <string name="facebook_app_id">304322210863531</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fund_name">Fund Name</string>
    <string name="fund_desc">Fund Description</string>
    <string name="more_info">More Info</string>
    <string name="deals">Deals</string>
    <string name="coupons">Coupons</string>
    <string name="fact_sheet">Fact Sheet</string>
    <string name="explore">Explore</string>
    <string name="top_trending">Top Trending Deals</string>
    <string name="account_statement">Account Statement</string>
    <string name="all_apps">All Apps</string>
    <string name="chinese">Chinese</string>
    <string name="thali">Thali</string>
    <string name="dessert">Dessert</string>
    <string name="nonveg">Non Veg</string>
    <string name="southindian">South Indian</string>
    <string name="bakery">Bakery</string>
    <string name="italian">Italian</string>
    <string name="usefulapps">Most Useful Apps</string>
    <string name="hotdeals">Hot Deals</string>
    <string name="beverages">Beverages</string>
    <string name="veg">Vegetarian</string>
    <string name="seafood">Seafood</string>
    <string name="northindian">North Indian</string>
    <string name="mexican">Mexican</string>
    <string name="thai">Thai</string>
    <string name="fastfood">Fast Food</string>
    <string name="ad">Ad</string>
    <string name="india">India</string>
    <string name="usa">USA</string>
    <string name="russia">Russia</string>
    <string name="china">China</string>
    <string name="pakistan">Pakistan</string>
    <string name="italy">Italy</string>
    <string name="uae">UAE</string>
    <string name="turkey">Turkey</string>
    <string name="switzerland">Switzerland</string>
    <string name="canada">Canada</string>
    <string name="singapore">Singapore</string>
    <string name="south_africa">South Africa</string>
    <string name="france">France</string>
    <string name="germany">Germany</string>
    <string name="japan">Japan</string>
    <string name="brazil">Brazil</string>
    <string name="indonesia">Indonesia</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="nigeria">Nigeria</string>
    <string name="portugul">Portugul</string>
    <string name="australia">Australia</string>
    <string name="greece">Greece</string>
</resources>