<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="food.order.delivery.online.offers.deals.coupons.view.fragment.CategoryFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/llSuperMarts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/card_bg_primary"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/chinese" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/chinese"
                    android:textSize="12sp" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/llGroceries"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/thali"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thali"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/llMedicines"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/gulab_jamun"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/llSupplements"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/nonveg"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nonveg"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/llElectronics"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/southindian"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/southindian"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/llBeauty"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/fastfood"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fastfood"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/ad_frame_cat_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/llJewellery"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/bakery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bakery"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/llKitchenAppliances"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/italian"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/italian"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/llKidsLifestyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/beverages"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverages"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/llBabyToys"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/veg"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/veg"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/llLingerie"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/seafood"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seafood"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/llMenInnerWear"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/northindian"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/northindian"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/llBooks"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/mexican"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mexican"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/llFootwear"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:background="@drawable/card_bg_primary">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="120dp"
                    android:src="@drawable/thai"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thai"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/ad_frame_cat_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>